--- a/resources/sass/global/responsive.scss
+++ b/resources/sass/global/responsive.scss
@@ -36,7 +36,7 @@
 
   .chart-container {
       height: 50vh;
-      width: 75vw;
+      width: 90vw;
   }
 
 }
